# uptime-pinger

./: .replit  FAQ.md  LICENSE  NOTICE  README.md  config.json  main.py  pings.txt  projects.txt  pyproject.toml  read.md  server.py
data/: 404s.txt  cliadds.txt  pings.txt  projects.txt  removes.txt
static/: FAQ.html  cli.txt  tos.txt
static/css/: style.css
templates/: admin.html  api.html  coolpeeps.html  dev.html  errors.html  factory.html  index.html  login.html  msg.html  old.html  others.html  removing-cook.html  stats.html
templates/info/: FAQ.html  TOS.html  api.html  others.html
templates/mobile/: login.html  stats.html
