[tool.poetry]
name = "RDSL Pinger"
version = "1.0.0"
description = "Cool uptimer for Replit made with Flask, to keep your Repls online!"
authors = ["Raadsel <iraadsel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replitdb = "^0.0.10"
flask = "^1.1.2"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
